--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 
-= hexy -- little utility to facilitate creating hex dumps like `xxd` 
+= hexy -- utility to create hex dumps 
 
 `hexy` is a ruby library that's easy to use to create hex dumps from 
-within your ruby scripts. It contains a number of options configure
+within your ruby scripts. It contains a number of options to configure
 how the hex dumb will end up looking.
 
 It should create a pleasant looking hex dumb by default:
