--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
+= Version 0.0.2
+=== Thu Jul  3 17:30:31 CEST 2008
+class method, more test
+
 = Version 0.0.1
 === Thu Jul  3 00:13:44 CEST 2008
 * initial creation 
+
 
 back[link:files/README.html]
