--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+= Version 0.1.0
+== Wed Sep 29 13:56:26 CEST 2010
+used enough to consider stable :)
+
 = Version 0.0.2
 === Thu Jul  3 17:30:31 CEST 2008
 class method, more test
