--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+= Version 0.2.0
+== Thu Oct  1 11:16:53 CEST 2015
+updated to be ruby > 1.9 compatible
+
 = Version 0.1.0
 == Wed Sep 29 13:56:26 CEST 2010
 used enough to consider stable :)
