--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+[![Build Status](https://travis-ci.org/a2800276/hexy.svg?branch=master)](https://travis-ci.org/a2800276/hexy)
 
 = hexy -- utility to create hex dumps 
 
@@ -50,10 +51,8 @@ package.
 
  You can install the +hexy+ package by executing:
 
-	gem install hexy -r
+	gem install hexy 
 
-alternatively, you can download +.tar.gz+ or +.zip+ archives from 
-Rubyforge[http://rubyforge.org/frs/?group_id=2203].
 
 
 == Mail
